# abcBridge

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  LICENSE  README  README.md  README.releases  Setup.hs  abcBridge.cabal  cabal.project  cabal.project.GHC822.freeze  cabal.project.GHC841.freeze  cabal.project.GHC842.freeze  cabal.project.GHC843.freeze  cabal.project.GHC865.freeze  cabal.project.freeze  stack.yaml
.github/workflows/: build.yml
cbits/: abcBridgeGiaDup.c  abcbridge.c  abcbridge_qbf.c  cnfWriteHeader.c  pthread_stubs.c
include/: abcbridge.h  cnfheader.h  orphan.h
scripts/: .gitignore  build-abc.sh  clean-abc.sh  lite-clean-abc.sh  setup-abc.sh
src/Data/: ABC.hs
src/Data/ABC/: AIG.hs  GIA.hs  Util.hs
src/Data/ABC/Internal/: ABC.chs  ABCGlobal.chs  AIG.chs  CEC.chs  CNF.chs  FRAIG.chs  Field.hs  GIA.chs  GiaAig.chs  IO.chs  Main.chs  Orphan.chs  VecInt.chs  VecPtr.chs
tests/: abc-test.hs  cnf-test.hs  eijk.S298.S.aig  find-segfault.hs  long-test.hs
tests/Tests/: Basic.hs  Operations.hs  QBF.hs
